test/gpu/native/assertOnFailToGpuize.3.good
warning: The prototype GPU support implies --no-checks. This may impact debuggability. To suppress this warning, compile with --no-checks explicitly
assertOnFailToGpuize.chpl:38: error: Loop contains assertOnGpu() but is not eligible for execution on a GPU
assertOnFailToGpuize.chpl:40: note: call has outer var access
